layout shift fix

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -1,10 +1,11 @@
 input, textarea, select {
   appearance: none;
   width: 100%;
-  border: 1px solid var(--stroke-default);
+  outline: 1px solid var(--stroke-default);
   padding: 0.75rem 1rem;
   font: var(--text);
   border-radius: 0.5rem;
+  border: 2px solid transparent;
 }
 
 label {
@@ -16,7 +17,7 @@ label {
 
 input:focus, textarea:focus, select:focus, input[type="date"]:focus-within {
   outline: 0.25rem solid var(--surface-secondary);
-  border: 0.125rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: 0.1px;
 }
 
